--- a/content/resources/mit11_203f10_2007midterm1.md
+++ b/content/resources/mit11_203f10_2007midterm1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information about 2007 midterm with answers.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/11-203-microeconomics-fall-2010/b544dd7bfff568b1da16694f501c2223_MIT11_203F10_2007midterm1.pdf
 file_type: application/pdf
+parent_uid: 41f62dfa-031f-ba80-6293-aa5718bfb9ef
 resourcetype: Document
 title: MIT11_203F10_2007midterm1.pdf
 uid: b544dd7b-fff5-68b1-da16-694f501c2223
