--- a/content/resources/mit11_203f10_2010midterm2.md
+++ b/content/resources/mit11_203f10_2010midterm2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information about 2010 midterm with answers.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/11-203-microeconomics-fall-2010/62c4d9612441a33828ba08bcec8b4762_MIT11_203F10_2010midterm2.pdf
 file_type: application/pdf
+parent_uid: 41f62dfa-031f-ba80-6293-aa5718bfb9ef
 resourcetype: Document
 title: MIT11_203F10_2010midterm2.pdf
 uid: 62c4d961-2441-a338-28ba-08bcec8b4762
