--- a/content/resources/mit11_203f10_pset1.md
+++ b/content/resources/mit11_203f10_pset1.md
@@ -6,6 +6,7 @@ description: This resource contains 6 problems about a shovel rents for $5.00 pe
   quantity demanded.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/11-203-microeconomics-fall-2010/7a3bfd7212c6d387e42e0e0eeb59a8e6_MIT11_203F10_pset1.pdf
 file_type: application/pdf
+parent_uid: b142149f-b9e7-ca8d-43aa-3cc22c0b2ec0
 resourcetype: Document
 title: MIT11_203F10_pset1.pdf
 uid: 7a3bfd72-12c6-d387-e42e-0e0eeb59a8e6
