--- a/content/resources/mit11_203f10_pset2.md
+++ b/content/resources/mit11_203f10_pset2.md
@@ -4,6 +4,7 @@ description: Problem set on supply curve elasticity, market equilibrium, demand 
   technical change and skilled labor, and utility functions.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/11-203-microeconomics-fall-2010/681c2e97fefd9c1adf50aa762cc1f4ff_MIT11_203F10_pset2.pdf
 file_type: application/pdf
+parent_uid: b142149f-b9e7-ca8d-43aa-3cc22c0b2ec0
 resourcetype: Document
 title: 'Problem Set #2'
 uid: 681c2e97-fefd-9c1a-df50-aa762cc1f4ff
