--- a/content/resources/mit11_203f10_pset3.md
+++ b/content/resources/mit11_203f10_pset3.md
@@ -5,6 +5,7 @@ description: This resource contains 5 problems about consider a different plan t
   and glasses of beer.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/11-203-microeconomics-fall-2010/b34b1d49ef5fe0edc50d81f99618ab3b_MIT11_203F10_pset3.pdf
 file_type: application/pdf
+parent_uid: b142149f-b9e7-ca8d-43aa-3cc22c0b2ec0
 resourcetype: Document
 title: MIT11_203F10_pset3.pdf
 uid: b34b1d49-ef5f-e0ed-c50d-81f99618ab3b
