--- a/content/resources/mit11_203f10_pset4.md
+++ b/content/resources/mit11_203f10_pset4.md
@@ -6,6 +6,7 @@ description: This resource contains 5 problems about Q is the quantity of fast f
   will make the most profit.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/11-203-microeconomics-fall-2010/2ffcd359812a56412c854402748ca9a1_MIT11_203F10_pset4.pdf
 file_type: application/pdf
+parent_uid: b142149f-b9e7-ca8d-43aa-3cc22c0b2ec0
 resourcetype: Document
 title: MIT11_203F10_pset4.pdf
 uid: 2ffcd359-812a-5641-2c85-4402748ca9a1
