--- a/content/resources/mit11_203f10_pset5.md
+++ b/content/resources/mit11_203f10_pset5.md
@@ -4,6 +4,7 @@ description: This resource contains solution about the following problem, use ap
   diagrams to show the changes in producer and consumer surplus as the situation evolves.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/11-203-microeconomics-fall-2010/4b24554ce51e63f519d1f64637268d97_MIT11_203F10_pset5.pdf
 file_type: application/pdf
+parent_uid: b142149f-b9e7-ca8d-43aa-3cc22c0b2ec0
 resourcetype: Document
 title: MIT11_203F10_pset5.pdf
 uid: 4b24554c-e51e-63f5-19d1-f64637268d97
