--- a/content/resources/mit11_203f10_pset6.md
+++ b/content/resources/mit11_203f10_pset6.md
@@ -6,6 +6,7 @@ description: "This resource contains information about over the same four period
   \ production."
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/11-203-microeconomics-fall-2010/cd64df667ef6a8b6c56cbc90ae44b2b3_MIT11_203F10_pset6.pdf
 file_type: application/pdf
+parent_uid: b142149f-b9e7-ca8d-43aa-3cc22c0b2ec0
 resourcetype: Document
 title: MIT11_203F10_pset6.pdf
 uid: cd64df66-7ef6-a8b6-c56c-bc90ae44b2b3
