--- a/content/resources/mit11_203f10_tax.md
+++ b/content/resources/mit11_203f10_tax.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information about note on the tax incidence problem.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/11-203-microeconomics-fall-2010/d1d0f7dca8a84925604a37b7165dfb0f_MIT11_203F10_tax.pdf
 file_type: application/pdf
+parent_uid: fe807a89-f6fc-d9a2-125f-aa04c00d6c45
 resourcetype: Document
 title: MIT11_203F10_tax.pdf
 uid: d1d0f7dc-a8a8-4925-604a-37b7165dfb0f
